src/liquid/components/ld-select/ld-select.css
:root {
  --ld-select-popper-max-height: 16rem;
}

.ld-select {
  display: inline-flex;
}

.ld-select__select,
.ld-select__btn-trigger {
  width: 100%;
}

.ld-select__btn-trigger {
  position: relative;
  font: var(--ld-typo-body-m);
  border: 0;
  outline: none;
  padding: var(--ld-sp-8) var(--ld-sp-12);
  border-radius: var(--ld-br-m);
  min-height: 2.5rem;
  min-width: 2.5rem;
  user-select: none;
  touch-action: manipulation;
  background-color: var(--ld-col-wht);
  line-height: 1;
  text-align: left;
  -webkit-touch-callout: none;

  &:where([aria-expanded='false']) {
    box-shadow: inset 0 0 0 0.1rem var(--ld-col-rblck1);
  }

  &:where([aria-expanded='true']) {
    z-index: 2;

    &:not(:focus:focus-visible) {
      box-shadow: none;
    }
  }

  &:where(:disabled),
  &:where([aria-disabled]) {
    opacity: 0.2;
  }

  &:where(:not(:disabled):not([aria-disabled])) {
    cursor: pointer;
  }

  @media (hover: hover) {
    &:hover {
      box-shadow: inset 0 0 0 0.1rem var(--ld-col-rblck2);
    }
  }
}

/* .ld-theme-ocean -> default */
.ld-select__btn-trigger,
.ld-theme-ocean .ld-select__btn-trigger,
[class*='ld-theme'] .ld-theme-ocean .ld-select__btn-trigger {
  &:where(:focus:focus-visible) {
    box-shadow: inset 0 0 0 0.1rem var(--ld-thm-ocean-bg-primary);
  }
}

.ld-theme-bubblegum,
[class*='ld-theme'] .ld-theme-bubblegum,
.ld-theme-shake,
[class*='ld-theme'] .ld-theme-shake,
.ld-theme-solvent,
[class*='ld-theme'] .ld-theme-solvent {
  :where(.ld-select__btn-trigger) {
    &:where(:focus:focus-visible) {
      box-shadow: inset 0 0 0 0.1rem var(--ld-col-rp-default);
    }
  }
}

.ld-theme-tea,
[class*='ld-theme'] .ld-theme-tea {
  :where(.ld-select__btn-trigger) {
    &:where(:focus:focus-visible) {
      box-shadow: inset 0 0 0 0.1rem var(--ld-thm-tea-bg-primary);
    }
  }
}

.ld-select--expanded {
  z-index: 2147483647; /* Highest possible z-index */
}
.ld-select__popper--expanded {
  z-index: 2147483646; /* Highest possible z-index - 1 */
}

.ld-select__popper {
  visibility: hidden;
  position: absolute;
}

.ld-select__scroll-container {
  max-height: var(--ld-select-popper-max-height);
  overflow-y: auto;
}

.ld-select__popper--expanded {
  visibility: inherit;

  &:after {
    content: '';
    position: absolute;
    width: 100%;
    height: calc(100% + 2.5rem);
    box-shadow: var(--ld-shadow-sticky);
    border-radius: var(--ld-br-m);
    pointer-events: none;
    background-color: var(--ld-col-wht);
    z-index: -1;
  }

  &.tether-target-attached-bottom,
  &.tether-pinned-top,
  &[data-popper-placement*='bottom'] {
    &:after {
      bottom: 0;
    }

    .ld-select__scroll-container {
      border-top: solid var(--ld-col-rblck1) 1px;
      border-bottom-left-radius: var(--ld-br-m);
      border-bottom-right-radius: var(--ld-br-m);
    }
  }

  &.tether-target-attached-top,
  &.tether-pinned-bottom,
  &[data-popper-placement*='top'] {
    &:after {
      top: 0;
    }

    .ld-select__scroll-container {
      border-bottom: solid var(--ld-col-rblck1) 1px;
      border-top-left-radius: var(--ld-br-m);
      border-top-right-radius: var(--ld-br-m);
    }
  }
}

